--- a/src/App.css
+++ b/src/App.css
@@ -175,3 +175,28 @@ html {
   font-size: 12px;
   font-family: "Playfair Display", serif;
 }
+.img {
+  position: absolute;
+  background-image: url("../src/rsz_spartan.png");
+  height: 60vh;
+  width: 20vw;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  bottom: 10px;
+  right: 10px;
+}
+
+.img_left {
+  position: absolute;
+  background-image: url("../src/rsz_spartan.png");
+  height: 60vh;
+  width: 20vw;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  bottom: 10px;
+  left: 10px;
+  transform: rotateY(180deg);
+}
+
